# NSTU

./: .gitignore
NSTU_Algoritm/: CMakeLists.txt
NSTU_Algoritm/lab/lab1/: a.out  main.cpp
NSTU_Algoritm/lab/lab2/: main.cpp  main_KSU.cpp
NSTU_Algoritm/lab/lab3/: main.cpp  main_KSU.cpp
NSTU_Algoritm/lab/lab4/: main.cpp  main_KSU.cpp
NSTU_Computational_mathematics/: .gitignore
NSTU_Computational_mathematics/lab/lab1/: main_bin.py
NSTU_Computational_mathematics/lab/lab2/: main.py
NSTU_Computational_mathematics/mat/1 lab/: .~lock.Отчет.docx#  1_Интерполирование МетУказания.doc  Отчет.docx
NSTU_Computational_mathematics/mat/2 lab/: 2_Интегрирование МетУказания.docx  Отчет.docx
NSTU_Computational_mathematics/mat/4 lab/: GLS.txt  GLS_EPS_DK.txt  GLS_K_DK.txt  VLob.txt  МетОдномерной оптимизации (20в).doc  Отчет.docx
NSTU_Modelirovanie_Processov_and_sysrem/: CMakeLists.txt
NSTU_Operation_System/: CMakeLists.txt
NSTU_Operation_System/RGZ/: CMakeLists.txt  a.out  gas_station  gas_station_pthread  lissajous  main  main.cpp  main.txt  main5.cpp  main8.cpp  main_class.cpp  main_func.cpp  sfml_app
NSTU_Operation_System/RGZ2/: CMakeLists.txt  lift.cpp  lift_child  main  main.cpp
NSTU_Operation_System/lab1/: .~lock.file.txt#  a.out  file.odt  file.txt  file.txt.save  main  main1_libre.cpp  main1_libre_system.cpp  main1_nano  main1_nano.cpp  main2.cpp  main22.cpp  my_program  notes.md  prog  prog.cpp  test  test.cpp
NSTU_Operation_System/lab2/: a.out  main.c  main.cpp  main_KSU.cpp  main_pthread  main_pthread.cpp
Technologii_program/Kursovaya/: Kursovaya.sln
Technologii_program/Kursovaya2/: Kursovaya2.sln
Technologii_program/Lab/: Lab.sln
Technologii_program/Lab10/: Lab10.sln
Technologii_program/Lab3/: Lab3.sln
Technologii_program/Lab4/: Lab4.sln
Technologii_program/Lab5/: Lab5.sln
Technologii_program/Lab6/: Lab6.sln
Technologii_program/Lab7/: Lab7.sln
Technologii_program/Lab8/: Lab8.sln
Technologii_program/Lab8.0/: Lab8.0.sln
Technologii_program/Lab9/: Lab9.sln
Technologii_program/Ray/: Ray.sln
Technologii_program/RayTracing/windows/: CMakeLists.txt  Main.cpp  OutputShader.frag
Technologii_program/lab2/: lab2.sln
(+55 files in other folders)
